--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
     padding: 0;
     margin: 0;
 
-    font-family: 'Poppins', 'Roboto';
+    font-family: 'Poppins', 'Roboto', sans-serif;
     background-color: var(--bg);
     color: var(--text-principal);
     overflow: hidden;
